# SENDRAG

./: .gitignore  documents.pkl  faiss_index.idx  pyproject.toml  run_app.py  run_app.sh  run_backend.sh  run_frontend.sh
api/: server.py
docs/: package_building_steps.md
scripts/: package_building_steps.txt  rag_amin.tar  setup_ec2_frontend.sh
scripts/old/: app.py  data_loader.py  index_docs.py  package_building_steps.txt
scripts/old/sendrag_storage/scripts/old/: chat.py  embedder.py  retrieval.py  run_rag.py  server.py  vector_store.py
scripts/old/sendrag_storage/scripts/rag_amin/RAG_chromadb/: process_pdfs.py  query_openai.py
scripts/rag_amin/RAG_chromadb/: Dockerfile  app.py
sendrag/: chat.py  config.py  embedder.py  retrieval.py  sendrag_app.py  vector_store.py
ui/: app.py
